added PUT for updateProcedure
